# RustIsing

./: .gitignore  Cargo.toml  README.md  plot_all.sh
docs/: index.html
src/: gray_flips.rs  ising.rs  lattice.rs  main.rs  plots.rs
