[package]
name = "rustising"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
image = "0.25.2"
itertools = "0.13.0"
plotters = "0.3.7"
rand = "0.8.5"
slugify = "0.1.0"

[[bin]]
name = "ising"
path = "src/main.rs"

